<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/single_row_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivUserPicture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/profile_picture"
        />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ivUserPicture"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/ivUserPicture"
        android:layout_toRightOf="@+id/ivUserPicture"
        android:ellipsize="end"
        android:gravity="start|center"
        android:maxLines="1"
        android:text="@string/textview2"
        />

    <TextView
        android:id="@+id/tvUserSong"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/ivUserPicture"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/tvUserName"
        android:ellipsize="end"
        android:gravity="start|center"
        android:maxLines="1"
        android:text="@string/textview3"
        />

</RelativeLayout>