<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.project.MainActivity">

    <!-- TabLayout to see the current page-->

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayoutMain"
        android:layout_width="match_parent"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/AppTabTextAppearance"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map_icon"
            android:background="@drawable/map_icon"
            android:icon="@android:drawable/ic_menu_share"
            android:text="@string/tabUsers"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/users_icon"
            android:icon="@drawable/map_icon"
            android:text="@string/tabMap"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_icon"
            android:background="@drawable/map_icon"
            android:icon="@drawable/profile_icon"
            android:text="@string/tabProfile"/>

    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/pagerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_frag_users"
        android:name="ch.epfl.sweng.project.Fragment.UsersFragment"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_frag_details"/>

</LinearLayout>
